--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: html5build
+name: androidbuild
 
 # Controls when the action will run. 
 on:
@@ -52,9 +52,9 @@ jobs:
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build Project.xml html5 --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build Project.xml android --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
           name: html5Build
-          path: 'export/release/html5/bin' 
+          path: 'export/release/android/bin' 
